# obs-dir-watch-media

./: CMakeLists.txt  README.md  buildspec.json  dir-watch-media.c  dir-watch-media.rc  installer.iss.in
.github/workflows/: build.yml
CI/macos/: dir-watch-media.pkgproj
data/locale/: de-DE.ini  en-US.ini  fr-FR.ini  nl-NL.ini
